--- a/about.html
+++ b/about.html
@@ -46,35 +46,10 @@
     <!-- Section About -->
     <main class="container main">
       <h2 class="about__title">About</h2>
-        <p>Guide developed by Jos&eacute; Antonio Siqueira de Cerqueira (<a href="https://orcid.org/0000-0002-8143-1042">https://orcid.org/0000-0002-8143-1042</a>), advised by Prof. Dr. Edna Dias Canedo (<a href="https://orcid.org/0000-0002-2159-339X">https://orcid.org/0000-0002-2159-339X</a>), as a result of the research in the Academic Master&apos;s Degree in the Graduate Program in Informatics (PPGI) from the University of Brasilia (UnB).</p>
-        <p>Site implemented with the support of Anayran Pinheiro de Azevedo, also advised by Edna Dias Canedo, as a requirement for the undergraduate thesis in Computing at the University of Brasilia (UnB).</p>
-        <p><br></p>
+        <p>Information about authors removed for blind review.</p>
         <p>This Guide is initially inspired by the ECCOLA method conceived by Vakkuri et al. [1] - where we expanded and implemented the cards in a web-based system - and by the ethical principles in AI and its ethical issues identified by Ryan and Stahl [2].</p>
         <p><br></p>
-        <p>The source code of the Guide is available at: https://github.com/josesiqueira/RE4AIEthicalGuide under the GNU GPLv3 license, i.e. it is a free software, so it is possible to modify functionalities, adapt the cards, and include more principles, according to the needs of the development team.</p>
-        <p><br></p>
-        <p>Our previous works:</p>
-        <p><br></p>
-        <p>SIQUEIRA DE CERQUEIRA, Jos&eacute; Antonio; Dos Santos Althoff, Lucas; Santos De Almeida, Paulo; Dias Canedo, Edna. Ethical Perspectives in AI: A Two-folded Exploratory Study From Literature and Active Development Projects. In: Proceedings of the 54th Hawaii International Conference on System Sciences. 2021. p. 5240.</p>
-        <p><br></p>
-        <p>How to cite this work:</p>
-        <p><br></p>
-        <div class="bloco__codigo">
-        <p>@Manual{Siqueira2021EthicsElicitationGuide,</p>
-        <p>&nbsp; title = &nbsp; &nbsp; &nbsp; {Guide for Artificial Intelligence Ethical Requirements Elicitation},</p>
-        <p>&nbsp; author = &nbsp; &nbsp; &nbsp;{Jos{\&apos;{e}} Antonio Siqueira de Cerqueira and</p>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Anayran Pinheiro de Azevedo and</p>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Edna Dias Canedo},</p>
-        <p>&nbsp; year = &nbsp; &nbsp; &nbsp; &nbsp; 2021,</p>
-        <p>&nbsp; month = &nbsp; &nbsp; &nbsp; &nbsp;apr,</p>
-        <p>&nbsp; note = &nbsp; &nbsp; &nbsp; &nbsp; {\url{<a href="https://josesiqueira.github.io/RE4AIEthicalGuide/index.html">https://josesiqueira.github.io/RE4AIEthicalGuide/</a>}}</p>
-        <p>}</p>
-        </div>
-        <p><br></p>
-        <p>Article on this guide still in the publication process.</p>
-        <p><br></p>
-        <p>Contact: <a href="mailto:jose.siqueira.cerqueira@gmail.com">jose.siqueira.cerqueira@gmail.com</a></p>
-        <p><a href="mailto:ednacanedo@unb.br">ednacanedo@unb.br</a> </p>
+        <p>The source code of the Guide is available at: https://github.com/hicsssubmitter/RE4AIEthicalGuide under the GNU GPLv3 license, i.e. it is a free software, so it is possible to modify functionalities, adapt the cards, and include more principles, according to the needs of the development team.</p>
         <p><br></p>
         <p><strong>References:&nbsp;</strong></p>
         <p>[1] VAKKURI, Ville; KEMELL, Kai-Kristian; ABRAHAMSSON, Pekka. ECCOLA-a method for implementing ethically aligned AI systems. In: 2020 46th Euromicro Conference on Software Engineering and Advanced Applications (SEAA). IEEE, 2020. p. 195-204.</p>
@@ -104,7 +79,7 @@
       </a><br />
           Unless otherwise stated, the contents are licensed under
         <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 &#8211; International</a>. 
-        The authors are responsible for the choice and presentation of their texts on this site and for the opinions expressed. <a class="link" href="https://github.com/josesiqueira/RE4AIEthicalGuide/">Source</a>.</p>
+        The authors are responsible for the choice and presentation of their texts on this site and for the opinions expressed. <a class="link" href="https://github.com/hicsssubmitter/RE4AIEthicalGuide/">Source</a>.</p>
     </footer>
   </body>
 </html>
